----------
! Fixed bug [github issuenr]: .... 		 (user visible bug fixed       - passed on to release notes)
+ Added feature ....				     (user visible new feature     - passed on to release notes)
- Removed/deprecated feature/method .... (user visible removed feature - passed on to release notes)
. Any other notes .... 				     (internal changes)

==================

2012-??-??
----------


2012-07-27 (Kristian Spangsege)
----------
+ tightdb::is_a<MyTable>(const Table&) added.
+ tightdb::unchecked_cast<MyTable>(TableRef) added.
+ tightdb::checked_cast<MyTable>(TableRef) added.
+ my_table[i].mixed.set_subtable() added.
+ my_table[i].mixed.set_subtable<MySubtable>() added.
+ my_table[i].mixed.is_subtable<MyTable>() added (inefficient, do we want it at all?).
+ my_table[i].mixed.get_subtable<MySubtable>() added (unsafe/unchecked, do we want it at all?).


2012-07-24 (Kristian Spangsege)
----------
+ New macro TIGHTDB_DEBUG to control compilation mode.
    The library (including all headers) is no longer affected in any way by the definition status of NDEBUG or _DEBUG.
    When we (TightDB) compile the library in debug mode, we must define this macro.
    We will deliver two versions of the library, one for release mode, and one for debug mode.
    If the customer wishes to use the debugging version of the library, he must do two things:
    1) Define TIGHTDB_DEBUG in any translation unit that includes a TightDB header.
    2) Use the version of the library that is compiled for debug mode (libtightdb_d.a).
+ Removed obsolete constructor Mixed(ColumnType). Use Mixed(subtable_tag) instead, since this has no runtime overhead.


2012-07-19 (Kristian Spangsege)
----------
+ Table::create() added. Use this to create a freestanding top-level table with dynamic lifetime (determined by reference counting).
+ TableRef::reset() added to set a table reference to null.


2012-07-15 (Kristian Spangsege)
----------